# security-ops

./: .editorconfig  .gitignore  20260601 - Claude Mythos 분석 및 국내 금융사 적용 방안 - v1.html  20260602 - FSI-Mythos 구현 코드.py  20260602 - FSI-MythosARCHITECTURE.html  CHANGELOG.md  CLAUDE.md  DESIGN.md  README.md  index.html  make-pdf.mjs
.claude/: settings.json
backend/: .dockerignore  CLAUDE.md  Dockerfile  __init__.py  app.py  pyproject.toml  requirements.txt
backend/agents/: __init__.py  bedrock.py  models.py  openai_mantle.py  prompts.py
backend/pipeline/: __init__.py  config.py  ensemble.py  orchestrator.py  phase0_languages.py  phase1_slicing.py  phase25_prefilter.py  phase2_ranker.py  phase35_challenger.py  phase3_hunter.py  phase4_validator.py  phase6_report.py  phase7_fpmemory.py  prompts_store.py  risk_score.py
backend/sample-target/: README.md  auth.py  crypto.py  files.py  queries.py  render.js  serial.py  transfer.c
backend/tests/: test_app.py  test_app_async.py  test_app_prompts.py  test_app_v2.py  test_bedrock.py  test_budget_guard.py  test_config.py  test_ensemble.py  test_history.py  test_models.py  test_openai_mantle.py  test_orchestrator.py  test_orchestrator_v2.py  test_phase0.py  test_phase1.py  test_phase2.py  test_phase25.py  test_phase3.py  test_phase35.py  test_phase4.py  test_phase6.py  test_phase7.py  test_prompt_injection.py  test_prompts.py  test_prompts_store.py  test_prompts_wiring.py  test_risk_score.py  test_sample_target.py  test_sandbox.py  test_staleness.py
backend/tools/: __init__.py  history.py  sandbox.py  staleness.py
(+101 files in other folders)
